--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ed317a</color>
     <color name="colorPrimaryDark">#c12284</color>
-    <color name="colorAccent">#cccccc</color>
+    <color name="colorAccent">#40baff</color>
 </resources>
